# sage

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  flake.nix
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
Formula/: sage.rb
assets/: sage-mascot-style-guide.docx
benchmarks/: RESULTS.md  checkpoint_bench.sg  restart_bench.sg  startup_bench.sg
crates/sage-checker/: Cargo.toml
crates/sage-checker/src/: checker.rs  error.rs  lib.rs  scope.rs  types.rs
crates/sage-cli/: Cargo.toml
crates/sage-cli/src/: main.rs
crates/sage-codegen/: Cargo.toml
crates/sage-codegen/src/: generator.rs  lib.rs
crates/sage-interpreter/: Cargo.toml
crates/sage-interpreter/src/: builtins.rs  env.rs  error.rs  eval.rs  lib.rs  llm.rs  observer.rs  runtime.rs  value.rs
crates/sage-lexer/: Cargo.toml
crates/sage-lexer/src/: lexer.rs  lib.rs  token.rs
crates/sage-loader/: Cargo.toml
crates/sage-loader/src/: error.rs  lib.rs  manifest.rs  tree.rs
crates/sage-package/: Cargo.toml
crates/sage-package/src/: cache.rs  dependency.rs  error.rs  lib.rs  lock.rs  resolver.rs
crates/sage-package/tests/: integration.rs
crates/sage-parser/: Cargo.toml
crates/sage-parser/src/: ast.rs  formatter.rs  hints.rs  lexer.rs  lib.rs  parser.rs  token.rs  ty.rs
crates/sage-playground-engine/: Cargo.toml
crates/sage-playground-engine/src/: interp.rs  lib.rs
crates/sage-runtime/: Cargo.toml
crates/sage-runtime/src/: agent.rs  error.rs  lib.rs  llm.rs  mock.rs  session.rs  supervisor.rs  tracing.rs
crates/sage-runtime/src/persistence/: backends.rs  mod.rs
crates/sage-runtime/src/stdlib/: env.rs  io.rs  json.rs  mod.rs  parsing.rs  string.rs  time.rs
crates/sage-runtime/src/tools/: database.rs  filesystem.rs  http.rs  mod.rs  shell.rs
crates/sage-sense/: Cargo.toml
crates/sage-sense/src/: analysis.rs  backend.rs  capabilities.rs  convert.rs  lib.rs  store.rs
crates/sage-types/: Cargo.toml
crates/sage-types/src/: lib.rs  span.rs  ty.rs
docs/: RFC-0001-poc.md  RFC-0002-project-structure.md  RFC-0003-compile-to-rust.md  RFC-0004-precompiled-runtime.md  RFC-0006-message-passing.md  RFC-0007-error-handling.md  RFC-0012-testing-framework.md  RFC-0013-standard-library.md  VISION.md
editors/sage-zed/: Cargo.toml  extension.toml
editors/sage-zed/languages/sage/: config.toml  highlights.scm  indents.scm
editors/sage-zed/src/: lib.rs
editors/vscode/: .vscodeignore  language-configuration.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: sage.tmLanguage.json
editors/zed/: Cargo.toml  extension.toml
examples/: db_guardian.sg  divine.sg  hello.sg  infer.sg  research.sg  supervision.sg  two_agents.sg  webapp_steward.sg
guide/: book.toml
guide/src/: SUMMARY.md  introduction.md
guide/src/agents/: beliefs.md  handlers.md  messaging.md  overview.md  spawning.md
guide/src/getting-started/: first-agent.md  installation.md
guide/src/language/: control-flow.md  functions.md  types.md
guide/src/llm/: infer.md  patterns.md
guide/src/reference/: cli.md  environment.md  errors.md
scripts/: build-toolchain.sh  install.sh
tests/: effect_handlers_test.sg  infer_mock_test.sg  lifecycle_test.sg  option_result_test.sg  persistence_integration_test.sg  protocol_session_test.sg  reference_programs_test.sg  result_stdlib_test.sg  session_types_test.sg  stdlib_extended_test.sg  stdlib_test.sg  supervisor_integration_test.sg  tool_mock_test.sg
tests/docker/: Dockerfile.ubuntu-clean
