[workspace]
members = [
    "crates/sage-lexer",
    "crates/sage-parser",
    "crates/sage-types",
    "crates/sage-checker",
    "crates/sage-interpreter",
    "crates/sage-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/peterp/sage"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
