[workspace]
members = [
    "crates/sage-parser",
    "crates/sage-loader",
    "crates/sage-package",
    "crates/sage-checker",
    "crates/sage-codegen",
    "crates/sage-runtime",
    "crates/sage-sense",
    "crates/sage-cli",
]
resolver = "2"

[workspace.package]
version = "0.6.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/sagelang/sage"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
# pedantic disabled for now - too many existing issues to fix in one go
# pedantic = { level = "warn", priority = -1 }
# Allow specific lints
approx_constant = "allow"
collapsible_match = "allow"
ptr_arg = "allow"
