[package]
name = "sage-checker"
description = "Name resolution and type checker for the Sage language"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sage-parser = { path = "../sage-parser", version = "0.5.2" }
sage-loader = { path = "../sage-loader", version = "0.5.2" }
miette = { version = "7", features = ["fancy"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
