[package]
name = "sage-cli"
description = "Command-line interface for the Sage language"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sage"
path = "src/main.rs"

[dependencies]
sage-lexer = { path = "../sage-lexer" }
sage-parser = { path = "../sage-parser" }
sage-checker = { path = "../sage-checker" }
sage-codegen = { path = "../sage-codegen" }
clap = { version = "4", features = ["derive"] }
miette = { version = "7", features = ["fancy"] }
dotenvy = "0.15"
console = "0.15"
indicatif = "0.17"

[lints]
workspace = true
