[package]
name = "sage-lang"
description = "A programming language where agents are first-class citizens"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "sage"
path = "src/main.rs"

[dependencies]
sage-parser = { path = "../sage-parser", version = "0.6.0" }
sage-checker = { path = "../sage-checker", version = "0.6.0" }
sage-codegen = { path = "../sage-codegen", version = "0.6.0" }
sage-loader = { path = "../sage-loader", version = "0.6.0" }
sage-package = { path = "../sage-package", version = "0.6.0" }
sage-sense = { path = "../sage-sense", version = "0.6.0" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
miette = { version = "7", features = ["fancy"] }
dotenvy = "0.15"
console = "0.15"
indicatif = "0.17"
toml_edit = "0.22"

[lints]
workspace = true
