[package]
name = "sage-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Code generator for compiling Sage to Rust"

[dependencies]
sage-parser = { path = "../sage-parser", version = "0.5.2" }
sage-loader = { path = "../sage-loader", version = "0.5.2" }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
