[package]
name = "sage-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Code generator for compiling Sage to Rust"

[dependencies]
sage-parser = { path = "../sage-parser", version = "2.0.0" }
sage-loader = { path = "../sage-loader", version = "2.0.0" }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
