[package]
name = "sage-interpreter"
description = "Tree-walking interpreter and runtime for the Sage language"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sage-parser = { path = "../sage-parser" }
sage-checker = { path = "../sage-checker" }
sage-types = { path = "../sage-types" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
miette = { version = "7", features = ["fancy"] }
thiserror = "2"

[lints]
workspace = true
