[package]
name = "sage-lexer"
description = "Lexer for the Sage language"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
logos = "0.14"
miette = { version = "7", features = ["fancy"] }
thiserror = "2"

[dev-dependencies]
pretty_assertions = "1"

[lints]
workspace = true
