[package]
name = "sage-loader"
description = "Module loader and project management for Sage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sage-parser = { path = "../sage-parser", version = "0.5.2" }
sage-package = { path = "../sage-package", version = "0.5.2" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
miette = { version = "7", features = ["fancy"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
