[package]
name = "sage-package"
description = "Package manager for Sage - Git-first dependency management"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
git2 = "0.19"
dirs = "5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
toml_edit = "0.22"
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
