[package]
name = "sage-parser"
description = "Parser for the Sage language"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sage-lexer = { path = "../sage-lexer" }
sage-types = { path = "../sage-types" }
chumsky = "0.9"

[dev-dependencies]
pretty_assertions = "1"

[lints]
workspace = true
