[package]
name = "sage-parser"
description = "Parser for the Sage language"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sage-lexer = { path = "../sage-lexer", version = "0.3.0" }
sage-types = { path = "../sage-types", version = "0.3.0" }
chumsky = "0.9"

[dev-dependencies]
pretty_assertions = "1"

[lints]
workspace = true
