[package]
name = "sage-parser"
description = "Parser for the Sage language"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
logos = "0.14"
chumsky = "0.9"
miette = { version = "7", features = ["fancy"] }
thiserror = "2"

[dev-dependencies]
pretty_assertions = "1"

[lints]
workspace = true
