[package]
name = "sage-playground-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM playground engine for Sage — parse and interpret Sage programs in the browser"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sage-parser = { path = "../sage-parser", version = "2.1.0" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"

[lints]
workspace = true
