[package]
name = "sage-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Runtime library for compiled Sage programs"

[features]
default = []
database = ["sqlx"]
# Persistence backends for @persistent fields
persistence-sqlite = ["sage-persistence/sqlite"]
persistence-postgres = ["sage-persistence/postgres"]
persistence-file = ["sage-persistence/file"]

[dependencies]
# Optional persistence dependency for sync adapters
sage-persistence = { path = "../sage-persistence", version = "2.0.0", optional = true }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = "0.4"
futures = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio", "any", "postgres", "sqlite"], optional = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
