[package]
name = "sage-sense"
description = "Language Server Protocol implementation for the Sage language"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Compiler pipeline
sage-parser = { path = "../sage-parser", version = "0.5.2" }
sage-checker = { path = "../sage-checker", version = "0.5.2" }

# LSP protocol
tower-lsp = "0.20"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
miette = "7"

[lints]
workspace = true
